--- a/LocationTracker.Client/Views/MainWindow.xaml
+++ b/LocationTracker.Client/Views/MainWindow.xaml
@@ -147,7 +147,7 @@
         <GridSplitter x:Name="GridColumn2" Grid.Column="1" HorizontalAlignment="Stretch" 
                       Grid.RowSpan="2" Style="{StaticResource VerticalGridSplitter}" Background="Transparent" />
 
-        <Grid x:Name="GridColumn3"  Grid.Column="2" Grid.RowSpan="2">
+        <Grid x:Name="GridColumn3"  Grid.Column="2" Grid.RowSpan="2" Margin="0,5,5,5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*" MinHeight="100" MaxHeight="200"/>
                 <RowDefinition   Height="*"  />
@@ -155,9 +155,12 @@
 
 
             <Grid Grid.Row="0" >
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-
-                <ListView  Name="gpsElementsListView" SelectionChanged="GpsElementsListView_SelectionChanged">
+                <ListView  Grid.Row="0" Name="gpsElementsListView" SelectionChanged="GpsElementsListView_SelectionChanged">
                     <ListView.View>
                         <GridView>
                             <GridView.Columns>
@@ -168,6 +171,17 @@
                         </GridView>
                     </ListView.View>
                 </ListView>
+
+                <Grid Grid.Row="1" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="Distance: "  />
+                    <TextBlock Grid.Column="1" Text="0" x:Name="distanceText" />
+                    <TextBlock Grid.Column="2" Text=" km" />
+                </Grid>
             </Grid>
 
             <Grid Grid.Row="1" >
